@@ -31,7 +31,6 @@ public class TestDiscoveryModule
                 new DiscoveryModule());
 
         Injector injector = app
-                .strictConfig()
                 .doNotInitializeLogging()
                 .initialize();
 
