@@ -46,7 +46,6 @@ public class TestServer
                 new MainModule());
 
         Injector injector = app
-                .strictConfig()
                 .doNotInitializeLogging()
                 .initialize();
 
